Fixed magic table
The two threat Magic result had the wrong span in it, causing no die img to show.

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <td>
                     <p>The spell doesn’t take effect until the start of the next round, or after a minute in narrative gameplay.</p>
                     <p>If the character is using a magical item, it becomes damaged one step.</p>
-                    <p>Until the end of the encounter, enemy spellcasters add <span class="boost"></span> when casting a spell that targets this character.</p>
+                    <p>Until the end of the encounter, enemy spellcasters add <span class="b"></span> when casting a spell that targets this character.</p>
                 </td>
             </tr>
             <tr>
